<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 消息页面复制 -->
    <string name="call_mode">听筒模式</string>
    <string name="speaker_mode">扬声器模式</string>
    <string name="copy">复制</string>
    <string name="resend">重发</string>
    <string name="send_message">发表</string>
    <string name="title_activity_pick_photo">PickPhotoActivity</string>
    <string name="send">发送</string>
    <string name="preview">预览</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="exit">退出</string>
    <string name="thumb_remove">清理图片缓存</string>
    <string name="notify_setting">通知设置</string>
    <string name="thumb_remove_finish">清理完成</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="request_login_faild">请求登陆消息服务器失败</string>
    <string name="sdcard_unavaluable">请检查存储卡是否可用</string>
    <string name="image_path_unavaluable">图片路径无效</string>
    <string name="disconnected">连接已断开</string>
    <string name="requesting">正在获取信息…</string>
    <string name="connecting">正在连接…</string>
    <string name="chat">发信息</string>
    <string name="contact_all">全部</string>
    <string name="contact_department">部门</string>
    <string name="top_left_back">返回</string>
    <string name="group_name_tip">群聊名称</string>
    <string name="chat_failed_search">未搜索到匹配的结果</string>
    <string name="save">保存</string>
    <string name="chat_detail">聊天详情</string>
    <string name="choose_contact">选择联系人</string>
    <string name="switch_login_server">切换登陆服务器</string>
    <string name="switch_login_server_title">输入登陆服务器地址</string>
    <string name="pop_back">返回上一页</string>
    <string name="action">功能按钮</string>


    <string name="desc_avatar">头像</string>
    <string name="contact_name">最近联系人</string>
    <string name="menu_undo">后退</string>
    <string name="menu_search">搜索</string>
    <string name="menu_users">用户</string>
    <string name="chat_title">聊天</string>
    <string name="loading_contacts">加载中…</string>
    <string name="request_unread_msg_faild">请求未读消息失败</string>
    <string name="load_contacts_failed">数据请求失败,请重试</string>
    <string name="get_unread_msg_count_failed">获取未读消息计数失败</string>
    <string name="get_user_info_failed">获取用户信息失败</string>
    <string name="get_recent_contact_failed">当前联系人加载失败</string>
    <string name="network_was_disconnected">连接已经断开</string>
    <string name="no_recent_contact">最近还没有人联系过你哦</string>

    <string name="title_activity_login">登录IM</string>

    <!-- Strings related to login -->
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_register"><b>登 录</b></string>
    <string name="action_sign_in_short">进入</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">正在登录&#8230;</string>
    <string name="error_invalid_email">用户名不合法</string>
    <string name="error_invalid_password">亲，密码太短了</string>
    <string name="error_incorrect_user">请检查用户名密码是否正确</string>
    <string name="error_name_required">请输入用户名</string>
    <string name="error_pwd_required">请输入密码</string>
    <string name="invalid_account">登录失败,请重试</string>
    <string name="invalid_network">请检查网络是否正常！</string>
    <string name="login_timeout">登陆超时,请重试</string>
    <string name="login_failed">登陆失败,请重试</string>
    <string name="action_kickout">用户在其他客户端登录</string>

    <string name="main_chat">聊天</string>
    <string name="main_contact">通讯录</string>
    <string name="main_inner_net">发现</string>
    <string name="main_me_tab">我的</string>
    <string name="page_me">我</string>
    <string name="page_setting">设置</string>
    <string name="page_user_detail">详细资料</string>



    <string name="app_name">BigTalk</string>

    <string name="message_image_desc">Message Image</string>
    <string name="tip_for_voice_forward">按住 说话</string>
    <string name="release_to_send_voice">松开 结束</string>
    <string name="photo_pop_pick_photo">从相册选择</string>
    <string name="no_gallery">没有找到相册</string>
    <string name="no_sdcard">没有SD卡</string>
    <string name="no_available_dir">没用找到存储目录</string>
    <string name="disconnected_by_server">"服务器已断开连接！"</string>
    <string name="link_is_connecting">正在建立连接,请稍后...</string>
    <string name="message_null">不能发送空内容哦！</string>
    <string name="take_photo_description">take photo</string>
    <string name="pick_photo_description">pick photo</string>
    <string name="network_has_disconnected">网络已经断开</string>
    <string name="message_send_failed">请检查网络</string>
    <string name="network_has_connected">网络已正常</string>
    <string name="image_download_failed">下载文件失败</string>
    <string name="send_good_url_btn_text">发送链接</string>
    <string name="loadding_target_info">正在获取对方信息...</string>
    <string name="audio_recorded_so_short">录音时间太短，请重新录制</string>
    <string name="photo">照片</string>
    <string name="take_a_photo">拍照</string>
    <string name="kick_tip">您已经被踢下线</string>
    <string name="goods_detail_title">我正在看:</string>
    <string name="goods_now_price_prefix">￥</string>
    <string name="goods_old_price_prefix">￥</string>
    <string name="history_divider_text">以上是历史信息</string>
    <string name="send_link">发送链接</string>
    <string name="write_audio_file_failed">录音文件写入失败</string>
    <string name="need_choose_images">请选择图片～</string>
    <string name="image_cannot_found">图片路径不存在，请选择其它图片！</string>
    <string name="not_found_album">没有找到可用的相册！</string>
    <string name="loading">加载中&#8230;</string>
    <string name="refresh_over">刷新完成</string>
    <string name="refresh">刷新</string>
    <string name="notfound_audio_file">该语音文件已丢失</string>
    <string name="audio_in_speeker">已经为您切换到扬声器模式</string>
    <string name="audio_in_call">已经为您切换到听筒模式</string>
    <string name="unavailable_image_file">该文件已损坏</string>
    <string name="block_chat">不能对话</string>
    <string name="unavailable_server">服务器开小差，请稍后重试～</string>
    <string name="i_know">我知道了</string>
    <string name="kick_off">该账号在其他设备登陆，您已被迫下线!</string>
    <string name="reconnect">重连</string>
    <string name="request_custom_service_failed">请求客服失败</string>
    <string name="invalid_detail_url">无效的详情链接,不能跳转哦～</string>
    <string name="invalid_order_url">无效的订单链接,不能跳转哦～</string>
    <string name="no_group_member">你可能已经不在该群中了!</string>
    <string name="default_emo">默认表情</string>
    <string name="yaya_emo">牙牙表情</string>
    <string name="call">呼叫</string>
    <string name="save_image">保存图片到手机</string>
    <string name="im_service_disconnected">无法连接到后台服务</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_last_refresh">上次更新：</string>

    <string name="default_tab_image">default_tab_image</string>
    <string name="_99">99+</string>
    <string name="recent_sessions">聊天</string>
    <string name="new_msg">新消息</string>
    <string name="default_user_name">小明</string>
    <string name="example_msg_time">11:11</string>
    <string name="example_text_message_content">哈哈</string>
    <string name="_6">6</string>
    <string name="example_nickname">小明</string>
    <string name="example_text_message">1111111111111</string>
    <string name="department">部门</string>
    <string name="phone">手机</string>
    <string name="birthday">生日</string>
    <string name="_1990_12_12">1990/12/12</string>
    <string name="email">邮箱</string>
    <string name="search_hint">搜索联系人，部门，会话，群</string>

    <string name="grant_camera_permission_failed">获取相机权限失败</string>
    <string name="grant_storage_permission_failed">获取存储权限失败</string>
    <string name="title_activity_image_capture_preview">ImageCapturePreviewActivity</string>

    <string name="grant_record_permission_failed">获取录音权限失败</string>
    <string name="grant_record_permission_failed_todo">录音权限被永久拒绝授权，请手动授予权限</string>

</resources>