<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tab_btn_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <!-- tab button icon -->
        <ImageView
            android:id="@+id/tab_btn_default"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/default_tab_image"
            android:scaleType="centerInside"
            android:src="@drawable/image_default_user_avatar" />

        <!-- tab button unread cnt -->
        <TextView
            android:id="@+id/tab_unread_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-5dp"
            android:layout_toEndOf="@id/tab_btn_default"
            android:background="@drawable/ic_message_notify"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/_99"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

        <!-- tab button title -->
        <TextView
            android:id="@+id/tab_btn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tab_btn_default"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/recent_sessions"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>

</LinearLayout>