<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_default_height"
        android:background="@drawable/appbar_default_bg">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="57dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:scaleType="center"
            android:src="@drawable/back_btn" />

        <TextView
            android:id="@+id/base_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#000000"
            android:textSize="@dimen/top_title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/top_bar_btn_right_margin"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end|center_vertical"
            android:text="@string/cancel"
            android:textColor="@drawable/text_while"
            android:textSize="@dimen/album_top_cancel_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="9dp" >

        <GridView
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clipToPadding="true"
            android:columnWidth="80dp"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:horizontalSpacing="6dp"
            android:numColumns="auto_fit"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="6dp" >
        </GridView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_bar_default_height"
        android:background="@drawable/pannel_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="15dp" >

        <TextView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/preview"
            android:textColor="@color/default_light_black_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/default_btn_bg"
            android:focusable="true"
            android:gravity="center|center_vertical"
            android:clickable="true"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>